--- a/resources/styles/Search-result-hover.less
+++ b/resources/styles/Search-result-hover.less
@@ -2,17 +2,16 @@
 	position: relative;
 }
 
-li.searchresult-with-quickview {
-	.searchresult:hover:after,
-	.mw-search-result-data:hover:after {
-		content: '';
-		position: absolute;
-		width: 24px;
-		height: 100%;
-		top: 0;
-		right: -21px;
-		background-image: url( ../assets/icons/arrow-forward.svg );
-		background-repeat: no-repeat;
-		background-position-y: center;
-	}
+li.searchresult-with-quickview--hover > .searchresult:after,
+li.searchresult-with-quickview > .searchresult:hover:after,
+li.searchresult-with-quickview > .mw-search-result-data:hover:after {
+	content: '';
+	position: absolute;
+	width: 24px;
+	height: 100%;
+	top: 0;
+	right: -21px;
+	background-image: url( ../assets/icons/arrow-forward.svg );
+	background-repeat: no-repeat;
+	background-position-y: center;
 }
