Increase hover space on special:search
- [x] Allow "page data" to be hovered and clicked too

Bug: T310281
Change-Id: I129fb36b2f92c2d69b7a33a074df0ad3601dbd3c

--- a/resources/styles/Search-result-hover.less
+++ b/resources/styles/Search-result-hover.less
@@ -2,14 +2,17 @@
 	position: relative;
 }
 
-div.searchresult-with-quickview:hover:after {
-	content: '';
-	position: absolute;
-	width: 24px;
-	height: 100%;
-	top: 0;
-	right: -21px;
-	background-image: url( ../assets/icons/arrow-forward.svg );
-	background-repeat: no-repeat;
-	background-position-y: center;
+li.searchresult-with-quickview {
+	.searchresult:hover:after,
+	.mw-search-result-data:hover:after {
+		content: '';
+		position: absolute;
+		width: 24px;
+		height: 100%;
+		top: 0;
+		right: -21px;
+		background-image: url( ../assets/icons/arrow-forward.svg );
+		background-repeat: no-repeat;
+		background-position-y: center;
+	}
 }
