--- a/resources/styles/Search-result-hover.less
+++ b/resources/styles/Search-result-hover.less
@@ -2,9 +2,9 @@
 	position: relative;
 }
 
-li.searchresult-with-quickview--hover > .searchresult:after,
-li.searchresult-with-quickview > .searchresult:hover:after,
-li.searchresult-with-quickview > .mw-search-result-data:hover:after {
+li.searchresult-with-quickview--hover .searchresult:after,
+li.searchresult-with-quickview .searchresult:hover:after,
+li.searchresult-with-quickview .mw-search-result-data:hover:after {
 	content: '';
 	position: absolute;
 	width: 24px;
