Quick View: Enable users to open and close quick views on special:search page
- [x] Add opacity to sister projects

Bug: T306885
Change-Id: Ifb754bd332b0785b78e065e54d8946319b1b21b8

--- a/resources/styles/Search-result-hover.less
+++ b/resources/styles/Search-result-hover.less
@@ -15,3 +15,10 @@ li.searchresult-with-quickview .mw-search-result-data:hover:after {
 	background-repeat: no-repeat;
 	background-position-y: center;
 }
+
+.search-preview-open:not( .skin-minerva ) {
+	/* stylelint-disable-next-line selector-max-id */
+	#mw-interwiki-results {
+		opacity: 0.2;
+	}
+}
