Enable users to open and close quick view on special:search results page
- [x] Implement new logic for validation
- [x] Make required changes to handle destination changes
- [x] Handle animation and scroll on mobile
- [x] Remove un-used Nav styles
- [x] Add new class to determine open SearchPreview
- [x] Add unit tests
- [x] Add animation to Arrow on mobile site

Bug: T320527
Change-Id: Iccd22d0d0ea0b46637ea38e44664d080caa1e8dd

--- a/resources/styles/Search-result-mobile.less
+++ b/resources/styles/Search-result-mobile.less
@@ -1,6 +1,17 @@
 .skin-minerva {
+	.mw-search-results,
+	.iw-results {
+		padding-left: 0;
+	}
+
 	.searchresult-with-quickview {
-		padding-right: 18px;
+		position: relative;
+		margin-right: -16px;
+
+		.searchresult,
+		.mw-search-result-data {
+			padding-right: 32px;
+		}
 
 		&:after {
 			background-image: url( ../assets/icons/arrow-down.svg );
@@ -9,9 +20,19 @@
 			content: '';
 			position: absolute;
 			width: 24px;
-			height: 100%;
+			height: min( calc( 100% ), 162px );
 			top: 0;
-			right: -8px;
+			right: 8px;
+			transition: transform 0.3s;
+			z-index: -1;
+		}
+	}
+
+	&.search-preview-open {
+		.searchresult-with-quickview--open {
+			&:after {
+				transform: scaleY( -1 );
+			}
 		}
 	}
 }
