Special:Search - incorrect position for RTL arrow for QuickView
- [x] Flip svg on RTL

Bug: T321757
Change-Id: I8d3b98844fcab76eabec633417720f8c4507febd

--- a/resources/styles/Search-result-hover.less
+++ b/resources/styles/Search-result-hover.less
@@ -20,6 +20,17 @@ li.searchresult-with-quickview .mw-search-result-data:hover {
 	}
 }
 
+/* use the opposite arrow on RTL */
+body.rtl {
+	li.searchresult-with-quickview--hover .searchresult,
+	li.searchresult-with-quickview .searchresult:hover,
+	li.searchresult-with-quickview .mw-search-result-data:hover {
+		&:after {
+			transform: scaleX( -1 );
+		}
+	}
+}
+
 .search-preview-open:not( .skin-minerva ) {
 	/* stylelint-disable-next-line selector-max-id */
 	#mw-interwiki-results {
