Make SearchVue work on smaller screen
- [x] Reduce the breakpoint used to be the tabled breakpoint

Bug: T321377
Depends-On: Ieebc40073eb3d0c8a56ebc8aec3f060199943ddc
Change-Id: I6b5f55f9fe602762e0a422ec5d6218075d8479da

--- a/resources/styles/SearchVue-result-hover.less
+++ b/resources/styles/SearchVue-result-hover.less
@@ -1,7 +1,7 @@
 
 @import '../../lib/mediawiki-ui-base.less';
 
-@media only screen and ( min-width: @width-breakpoint-desktop ) {
+@media only screen and ( min-width: @width-breakpoint-tablet ) {
 	body:not( .skin-minerva ) {
 		.searchresult-with-quickview {
 			position: relative;
