Enhance search Preview keyboard navigation
- [x] Add aria label to arrow on search result
- [x] Enable Search Preview to be closed with ESC
- [x] Autofocus Dialog and add required aria information

Bug: T326641
Change-Id: I362b8dbd697b99c7e175ae0932bb7fb0e1c1bece

--- a/resources/styles/SearchVue-result-mobile.less
+++ b/resources/styles/SearchVue-result-mobile.less
@@ -1,11 +1,7 @@
 .skin-minerva {
-	.searchresult-with-quickview {
-		position: relative;
-
+	.searchresult-with-quickview,
+	.quickView-aria-button {
 		&:after {
-			background-image: url( ../assets/icons/arrow-down.svg );
-			background-repeat: no-repeat;
-			background-position-y: center;
 			content: '';
 			position: absolute;
 			width: 24px;
@@ -14,6 +10,16 @@
 			right: 8px;
 			transition: transform 0.3s;
 			z-index: -1;
+		}
+	}
+
+	.searchresult-with-quickview {
+		position: relative;
+
+		&:after {
+			background-image: url( ../assets/icons/arrow-down.svg );
+			background-repeat: no-repeat;
+			background-position-y: center;
 		}
 	}
 
