--- a/resources/styles/SearchVue-result-hover.less
+++ b/resources/styles/SearchVue-result-hover.less
@@ -10,11 +10,12 @@
 		li.searchresult-with-quickview--hover .searchresult,
 		li.searchresult-with-quickview--open .searchresult,
 		li.searchresult-with-quickview .searchresult,
-		li.searchresult-with-quickview .mw-search-result-data {
+		li.searchresult-with-quickview .mw-search-result-data,
+		li.searchresult-with-quickview .quickView-aria-button {
 			cursor: pointer;
 
 			&:after {
-				content: '';
+				content: ' ';
 				position: absolute;
 				width: 24px;
 				height: 100%;
@@ -26,7 +27,9 @@
 		li.searchresult-with-quickview--hover .searchresult,
 		li.searchresult-with-quickview--open .searchresult,
 		li.searchresult-with-quickview .searchresult:hover,
-		li.searchresult-with-quickview .mw-search-result-data:hover {
+		li.searchresult-with-quickview .mw-search-result-data:hover,
+		li.searchresult-with-quickview .quickView-aria-button:hover,
+		li.searchresult-with-quickview .quickView-aria-button:focus {
 			&:after {
 				background-image: url( ../assets/icons/arrow-forward.svg );
 				background-repeat: no-repeat;
