Improve Search Preview Spacing on mobile
- [x] Reset margin applied by thumbnail
- [x] Set margin between search result consistent to 16px
- [x] change margin around the search preview to 8px top 20px bottom

Bug: T320743
Change-Id: I5af6909b64cc15346cde95af8e5cde017ebf2fd8

--- a/resources/styles/SearchVue-result-mobile.less
+++ b/resources/styles/SearchVue-result-mobile.less
@@ -24,4 +24,14 @@
 			}
 		}
 	}
+
+	// This is the table created by the thumbnail. This HTML structure is just present
+	// when the search result have thumbnails
+	table.searchResultImage {
+		margin: 0;
+	}
+
+	.mw-search-result {
+		margin-bottom: 16px;
+	}
 }
