Mobile search Preview not shown for articles with existing desktop
- [x] Show search vue arrow if Thumbnail is available
- [x] Remove Ellipsis if the text is empty
- [x] Change Mobile "visibility" to take into account thumbnail and sections
- [x] Improve Arrow placement for small snippets

Bug: T328716
Change-Id: Ic05fcb3050a59c8aa3997623c5061d89e48c0a4c

--- a/resources/styles/SearchVue-result-mobile.less
+++ b/resources/styles/SearchVue-result-mobile.less
@@ -5,7 +5,7 @@
 			content: '';
 			position: absolute;
 			width: 24px;
-			height: min( calc( 100% ), 162px );
+			height: ~'min( calc( 100% ), 162px )';
 			top: 0;
 			right: 8px;
 			transition: transform 0.3s;
