build: Updating npm dependencies
* stylelint-config-wikimedia: 0.13.1 → 0.14.0
* grunt: 1.5.3 → 1.6.1

Change-Id: I76958af93120e29102e014aef45a630c9580000b

--- a/resources/styles/SearchVue-result-hover.less
+++ b/resources/styles/SearchVue-result-hover.less
@@ -14,7 +14,7 @@
 		li.searchresult-with-quickview .quickView-aria-button {
 			cursor: pointer;
 
-			&:after {
+			&::after {
 				content: ' ';
 				position: absolute;
 				width: 24px;
@@ -30,7 +30,7 @@
 		li.searchresult-with-quickview .mw-search-result-data:hover,
 		li.searchresult-with-quickview .quickView-aria-button:hover,
 		li.searchresult-with-quickview .quickView-aria-button:focus {
-			&:after {
+			&::after {
 				background-image: url( ../assets/icons/arrow-forward.svg );
 				background-repeat: no-repeat;
 				background-position-y: center;
@@ -42,7 +42,7 @@
 			li.searchresult-with-quickview--hover .searchresult,
 			li.searchresult-with-quickview .searchresult:hover,
 			li.searchresult-with-quickview .mw-search-result-data:hover {
-				&:after {
+				&::after {
 					transform: scaleX( -1 );
 				}
 			}
