styles: Replace and remove WikimediaUI Base vars with skin variables
Replacing several values with skin variables featuring new
Codex design tokens featuring. While on this, removing also
'mediawiki-ui-base.less' external library and npm dependency.

Note, practically all values should be 1:1 visual replacements.

Bug: T334934
Change-Id: If2e27808922668e221787bc5ab8f77be76fdb580

--- a/resources/styles/SearchVue-result-hover.less
+++ b/resources/styles/SearchVue-result-hover.less
@@ -1,5 +1,5 @@
 
-@import '../../lib/mediawiki-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 
 @media only screen and ( min-width: @width-breakpoint-tablet ) {
 	body:not( .skin-minerva ) {
