styles: Use new forward-facing breakpoint token
Replacing legacy tablet breakpoint variable with new Codex
design system `@min-width-breakpoint-tablet` token.

Bug: T331403
Change-Id: I2a787b9bd4fd326027338cd7fc569f5162a40725

--- a/resources/styles/SearchVue-result-hover.less
+++ b/resources/styles/SearchVue-result-hover.less
@@ -1,7 +1,7 @@
 
 @import 'mediawiki.skin.variables.less';
 
-@media only screen and ( min-width: @width-breakpoint-tablet ) {
+@media only screen and ( min-width: @min-width-breakpoint-tablet ) {
 	body:not( .skin-minerva ) {
 		.searchresult-with-quickview {
 			position: relative;
